--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Huixin Dong | 董慧鑫"
+title                    : "Huixin Dong 董慧鑫"
 description              : "Ph.D. Candidate @ HUST"
 repository               : "donghuixin.github.io"
 google_scholar_stats_use_cdn : true
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Huixin Dong | 董慧鑫"
+  name             : "Huixin Dong 董慧鑫"
   avatar           : "images/avatar.png"
   bio              : "Huazhong University of Science and Technology (HUST)"
   location         : "Wuhan, China"
