--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Huixin Dong 董慧鑫"
-description              : "Postdoctoral research fellow"
+description              : "Ph.D. Candidate"
 repository               : "donghuixin.github.io"
 google_scholar_stats_use_cdn : true
 
