--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Huixin Dong 董慧鑫"
   avatar           : "images/avatar.png"
-  bio              : "Hong Kong University of Science and Technology (HKUST)"
+  bio              : "Huazhong University of Science and Technology (HUST)"
   location         : "Wuhan, China"
   employer         :
   pubmed           : 
